Fix spacing around tags.

--- a/themes/ttf-hugo-future-imperfect/static/css/main.css
+++ b/themes/ttf-hugo-future-imperfect/static/css/main.css
@@ -906,6 +906,7 @@
 			cursor: default;
 			list-style: none;
 			padding-left: 0;
+			padding-right: 1em;
 		}
 
 			ul.actions li {
